fix content responsive on mobile

--- a/f8/w3_band/assets/css/responsive.css
+++ b/f8/w3_band/assets/css/responsive.css
@@ -8,6 +8,10 @@
 
 /* Mobile */
 @media (max-width: 740px) {
+  .s-col-full {
+    width: 100%;
+  }
+
   #header {
     overflow: hidden;
   }
@@ -44,5 +48,9 @@
   #nav .subnav a {
     color: #fff;
     padding: 5px 41px;
+  }
+
+  #content .member-img {
+    width: 60%;
   }
 }
