--- a/f8/w3_band/assets/css/style.css
+++ b/f8/w3_band/assets/css/style.css
@@ -252,7 +252,7 @@ html {
 }
 
 #content .member-list {
-  margin-top: 48px;
+  margin-top: 32px;
 }
 
 #content .member-name {
@@ -304,7 +304,7 @@ html {
 
 /* Places */
 .places-list {
-  margin-top: 32px;
+  margin-top: 16px;
 }
 
 .place-img {
